02-envoy-gateway/08-referencegrant/manifests/refgrant-service.yaml
---
# Permits HTTPRoutes in `apps` to backendRef Services in `demo`.
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: httproute-to-services
  namespace: demo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: apps
  to:
    - group: ""
      kind: Service
      name: helloworld
